# drmlke

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  package.json  pnpm-workspace.yaml  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/drmlke_api/: __init__.py  main.py
apps/client/: README.md
apps/provider/: pyproject.toml
apps/provider/src/drmlke_provider/: __init__.py  main.py
apps/worker/: pyproject.toml
apps/worker/src/drmlke_worker/: __init__.py  main.py
deploy/spark/: README.md
docs/: access-inventory.md  architecture.md  deployment.md  drmlke-roadmap.md  environment.md  manual-runbook.md
infra/docker/: api.Dockerfile  base.Dockerfile  provider.Dockerfile  worker.Dockerfile
scripts/: doctor.sh
tests/: test_core_contracts.py  test_provider.py
