[project]
name = "drmlke"
version = "0.1.0"
description = "Local-first family crypto intelligence and paper-trading runtime."
requires-python = ">=3.12,<3.13"
dependencies = [
  "drmlke-agents",
  "drmlke-api",
  "drmlke-core",
  "drmlke-provider",
  "drmlke-risk",
  "drmlke-storage",
  "drmlke-wallet",
  "drmlke-worker",
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyarrow>=16.0.0",
  "structlog>=24.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker",
  "apps/provider",
  "packages/core",
  "packages/storage",
  "packages/wallet",
  "packages/agents",
  "packages/risk",
]

[tool.uv.sources]
drmlke-api = { workspace = true }
drmlke-worker = { workspace = true }
drmlke-provider = { workspace = true }
drmlke-core = { workspace = true }
drmlke-storage = { workspace = true }
drmlke-wallet = { workspace = true }
drmlke-agents = { workspace = true }
drmlke-risk = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
